# SubCellPortable

./: .gitignore  README.md  config.yaml  inference.py  models_urls.yaml  path_list.csv  process.py  pyproject.toml  requirements.txt  tutorial.ipynb  tutorial_wip.ipynb  vit_model.py
models/bg/mae_contrast_supcon_model/: model_config.yaml
models/bg/vit_supcon_model/: model_config.yaml
models/rbg/mae_contrast_supcon_model/: model_config.yaml
models/rbg/vit_supcon_model/: model_config.yaml
models/rybg/mae_contrast_supcon_model/: model_config.yaml
models/rybg/vit_supcon_model/: model_config.yaml
models/ybg/mae_contrast_supcon_model/: model_config.yaml
models/ybg/vit_supcon_model/: model_config.yaml
src/: inference.py  load.py  models_urls.yaml  vit_model.py
src/models/bg/mae_contrast_supcon_model/: model_config.yaml
src/models/bg/vit_supcon_model/: model_config.yaml
src/models/ybg/vit_supcon_model/: model_config.yaml
