[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "subcellportable"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "scikit-image==0.22.0",
    "torch==2.4.1",
    "torchvision==0.19.1",
    "PyYAML==6.0.1",
    "transformers==4.45.1",
    "numpy==1.26.4",
    "pandas==2.2.3",
    "requests==2.32.3",
    "boto3==1.35.76",
    "imagecodecs==2024.12.30",
]

[tool.setuptools]
package-dir = { "subcellportable" = "src" }
packages = ["subcellportable"]

[tool.setuptools.package-data]
"your_package" = ["src/models/*"]
